--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
+  width: 100vw;
+  height: 100hw;
   overflow: hidden;
-  background: green;
 }
-
 .ball-one {
   width: 5vw;
   position: absolute;
   bottom: -20%;
   left: 10vw;
   transform: rotate(3grad);
-  animation: ball-one 18s ease-in-out infinite;
+  animation: ball-one 25s ease infinite;
   z-index: 3;
 }
 
@@ -36,7 +36,7 @@ body {
   bottom: 10%;
   left: 50vw;
   transform: rotate(1grad);
-  animation: ball-two 18s ease-in-out infinite;
+  animation: ball-two 25s ease infinite;
 }
 
 @keyframes ball-two {
@@ -62,7 +62,7 @@ body {
   bottom: 5%;
   right: -10%;
   transform: rotate(1grad);
-  animation: ball-three 17s ease-in-out infinite;
+  animation: ball-three 24s ease infinite;
 }
 
 @keyframes ball-three {
@@ -89,7 +89,7 @@ body {
   bottom: 5%;
   left: -5%;
   transform: rotate(1grad);
-  animation: ball-four 20s ease-in-out infinite;
+  animation: ball-four 27s ease infinite;
 }
 
 @keyframes ball-four {
@@ -119,7 +119,7 @@ body {
   bottom: -5%;
   right: -5%;
   transform: rotate(1grad);
-  animation: ball-five 20s ease-in-out infinite;
+  animation: ball-five 27s ease infinite;
 }
 
 @keyframes ball-five {
@@ -148,7 +148,7 @@ body {
   position: absolute;
   bottom: -5%;
   right: 5%;
-  animation: cloud-one 40s ease-in-out forwards;
+  animation: cloud-one 40s ease forwards;
   z-index: -10;
 }
 
