--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background-color: tomato;
+  background-image: radial-gradient(circle 100px at -27.3% 144%, rgba(255, 22, 22, 1) 0%, rgb(63, 44, 44) 43.4%, rgba(0, 0, 0, 1) 65.8%, rgb(238, 28, 28) 100.2%);
   padding: 0;
   margin: 0;
 }
@@ -22,14 +22,43 @@ body {
 }*/
 
 .text {
-position: relative;
-transform: translate(50%, 100%);
+height: 100vh;
+width: 100vw;
+display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-content {
+  /*transform: scale(0);*/
+  text-align: center;
+  font-family: "Agu Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "MORF" 0;
+    font-size: 12vw;
+    color: whitesmoke;
+   animation: text-anim 4s ease-in-out forwards;
+}
+
+@keyframes text-anim {
+  0% {
+   transform: scale(0);
+  }
+    50% {
+      transform: scale(1);
+    }
+  100% {
+    transform: scale(1) ;
+  }
 }
 
 .ball-1 {
-  top: 20vw;
-  right: 10vw;
- 
+  top: 100vh;
+  left: 100vw;
+  animation: ball-fall-1 10s ease forwards;
   z-index: 3;
 }
 
@@ -44,16 +73,16 @@ transform: translate(50%, 100%);
     transform: rotate(-4grad);
   }
   100% {
-    top: 50vw;
-    right: 50vw;
+    top: 20vw;
+      right: 10vw;
     transform: rotate(0grad);
   }
 }
 
 .ball-2 {
-  top: 60vw;
-  left: 70vw;
-  /*animation: ball-fall-2 10s ease forwards;*/
+  top: 75vh;
+  left: 100vw;
+  animation: ball-fall-2 10s ease forwards;
 }
 
 @keyframes ball-fall-2 {
@@ -67,16 +96,16 @@ transform: translate(50%, 100%);
     transform: rotate(4grad);
   }
   100% {
-  top: 40vw;
-    left: 5vw;
+    top: 60vw;
+      left: 70vw;
     transform: rotate(0grad);
   }
 }
 
 .ball-3 {
-  top: 80vw;
-  left: 5vw;
-  
+  top: 25vh;
+  left: -90vw;
+  animation: ball-fall-3 10s ease forwards;
 }
 
 @keyframes ball-fall-3 {
@@ -93,15 +122,16 @@ transform: translate(50%, 100%);
   }
 
   100% {
-    top: 60vw;
-    left: 20vw;
+    top: 80vw;
+      left: 5vw;
     transform: rotate(0grad);
   }
 }
 
 .ball-4 {
-  top: 80vh;
-  left: 20vw;
+  top: 0vh;
+  left: -90vw;
+  animation: ball-fall-4 10s ease forwards;
 }
 
 @keyframes ball-fall-4 {
@@ -118,16 +148,16 @@ transform: translate(50%, 100%);
   }
 
   100% {
-    top: 10vw;
-    left: 0vw;
+    top: 80vh;
+      left: 20vw;
     transform: rotate(0grad);
   }
 }
 
 .ball-5 {
-  top: 70vh;
-  left: 70vw;
- 
+  top: -50vh;
+  left: 30vw;
+  animation: ball-fall-5 10s ease forwards;
 }
 
 @keyframes ball-fall-5 {
@@ -144,16 +174,16 @@ transform: translate(50%, 100%);
   }
 
   100% {
-    top: 85vw;
-    left: -5vw;
+    top: 70vh;
+      left: 70vw;
     transform: rotate(0grad);
   }
 }
 
 .ball-6 {
-  top: 60vh;
-  left: 40vw;
-  
+  top: -50vh;
+  left: 60vw;
+  animation: ball-fall-6 10s ease forwards;
 }
 
 @keyframes ball-fall-6 {
@@ -170,16 +200,16 @@ transform: translate(50%, 100%);
   }
 
   100% {
-    top: 10vw;
-    left: 40vw;
+    top: 60vh;
+      left: 40vw;
     transform: rotate(0grad);
   }
 }
 
 .ball-7 {
-  top: 60vh;
-  left: -2vw;
-  
+  top: -50vh;
+  left: 90vw;
+  animation: ball-fall-7 10s ease forwards;
 }
 
 @keyframes ball-fall-7 {
@@ -196,65 +226,246 @@ transform: translate(50%, 100%);
   }
 
   100% {
-    top: 65vw;
-    left: -15vw;
+    top: 60vh;
+      left: -2vw;
     transform: rotate(0grad);
   }
 }
 
 .ball-8 {
-  top: 20vh;
-  left: 30vw;
+  top: 0vh;
+  left: 100vw;
+  animation: ball-fall-8 10s ease forwards;
+}
 
+@keyframes ball-fall-8 {
+  25% {
+    transform: rotate(3grad);
+  }
+
+  50% {
+    transform: rotate(-3grad);
+  }
+
+  75% {
+    transform: rotate(4grad);
+  }
+
+  100% {
+    top: 20vh;
+      left: 30vw;
+    transform: rotate(0grad);
+  }
 }
 
 .ball-9 {
-  top: 45vh;
-  left: 70vw;
+  top: 25vh;
+  left: 100vw;
+  animation: ball-fall-9 10s ease forwards;
+}
 
+@keyframes ball-fall-9 {
+  25% {
+    transform: rotate(3grad);
+  }
+
+  50% {
+    transform: rotate(-3grad);
+  }
+
+  75% {
+    transform: rotate(4grad);
+  }
+
+  100% {
+    top: 45vh;
+      left: 70vw;
+    transform: rotate(0grad);
+  }
 }
 
 .ball-10 {
-  top: -2vh;
-  left: -1vw;
+  top: 75vh;
+  left: 100vw;
+  animation: ball-fall-10 10s ease forwards;
+}
 
+@keyframes ball-fall-10 {
+  25% {
+    transform: rotate(3grad);
+  }
+
+  50% {
+    transform: rotate(-3grad);
+  }
+
+  75% {
+    transform: rotate(4grad);
+  }
+
+  100% {
+    top: -2vh;
+      left: -1vw;
+    transform: rotate(0grad);
+  }
 }
 
 .ball-11 {
-  top: 2vh;
-  left: 45vw;
+  top: 100vh;
+  left: 100vw;
+  animation: ball-fall-11 10s ease forwards;
+}
 
+@keyframes ball-fall-11 {
+  25% {
+    transform: rotate(3grad);
+  }
+
+  50% {
+    transform: rotate(-3grad);
+  }
+
+  75% {
+    transform: rotate(4grad);
+  }
+
+  100% {
+    top: 2vh;
+      left: 45vw;
+    transform: rotate(0grad);
+  }
 }
 
 .ball-12 {
-  top: 18vh;
-  left: 5vw;
+  top: 90vh;
+  left: 90vw;
+  animation: ball-fall-12 10s ease forwards;
+}
 
+@keyframes ball-fall-12 {
+  25% {
+    transform: rotate(3grad);
+  }
+
+  50% {
+    transform: rotate(-3grad);
+  }
+
+  75% {
+    transform: rotate(4grad);
+  }
+
+  100% {
+    top: 18vh;
+      left: 5vw;
+    transform: rotate(0grad);
+  }
 }
 
 .ball-13 {
-  top: 40vh;
-  left: 40vw;
+  top: 90vh;
+  left: 60vw;
+  animation: ball-fall-13 10s ease forwards;
+}
 
+@keyframes ball-fall-13 {
+  25% {
+    transform: rotate(3grad);
+  }
+
+  50% {
+    transform: rotate(-3grad);
+  }
+
+  75% {
+    transform: rotate(4grad);
+  }
+
+  100% {
+    top: 40vh;
+      left: 40vw;
+    transform: rotate(0grad);
+  }
 }
 
 .ball-14 {
-  top: -5vh;
-  left: 80vw;
+  top: 90vh;
+  left: 30vw;
+  animation: ball-fall-14 10s ease forwards;
+}
 
+@keyframes ball-fall-14 {
+  25% {
+    transform: rotate(3grad);
+  }
+
+  50% {
+    transform: rotate(-3grad);
+  }
+
+  75% {
+    transform: rotate(4grad);
+  }
+
+  100% {
+    top: -5vh;
+      left: 80vw;
+    transform: rotate(0grad);
+  }
 }
 
 .ball-15 {
   top: 90vh;
-  left: 80vw;
+  left: 0vw;
+  animation: ball-fall-15 10s ease forwards;
+}
 
+@keyframes ball-fall-15 {
+  25% {
+    transform: rotate(3grad);
+  }
+
+  50% {
+    transform: rotate(-3grad);
+  }
+
+  75% {
+    transform: rotate(4grad);
+  }
+
+  100% {
+    top: 90vh;
+      left: 80vw;
+    transform: rotate(0grad);
+  }
 }
 
 .ball-16 {
   top: 90vh;
-  left: -2vw;
-
+  left: 0vw;
+  animation: ball-fall-16 10s ease forwards;
 }
+
+@keyframes ball-fall-16 {
+  25% {
+    transform: rotate(3grad);
+  }
+
+  50% {
+    transform: rotate(-3grad);
+  }
+
+  75% {
+    transform: rotate(4grad);
+  }
+
+  100% {
+    top: 90vh;
+      left: -2vw;
+    transform: rotate(0grad);
+  }
+}
+
 .cloud-two {
   width: 15vw;
   position: absolute;
