--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ body {
 .text {
 height: 100vh;
 width: 100vw;
-display: flex;
   justify-content: center;
   align-items: center;
+  display: none;
 }
 
 .text-content {
@@ -58,6 +58,7 @@ display: flex;
   position: absolute;
     top: 0;
     left: 0;
+    display: none;
 }
 
 .words-content {
